# GoIt_Web_HW14

./: .env.example  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml  test.db
alembic/: env.py
alembic/versions/: 4e72b8a39719_add_users_table.py  686493beff8c_initial_migration.py  8439632d8d34_add_username.py  b3d27becc9de_add_user_id.py  d0634f4b5419_add_user_avatar.py  de735de9298c_add_user_verify.py
docs/: conf.py  index.rst
postgres-data/base/16384/: 1247  1249  1259  16390  16391  16398  16400  16402  16409  16411  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  5002  pg_internal.init
postgres-data/base/16389/: 1247  1247_fsm  1247_vm  1249  1249_fsm  1249_vm  1255  1255_fsm  1255_vm  1259  1259_fsm  1259_vm  13396  13396_fsm  13396_vm  13400  13401  13401_fsm  13401_vm  13406  13406_fsm  13406_vm  13410  13411  13411_fsm  13411_vm  13415  2228  2337  2579  2600  2600_fsm  2600_vm  2601  2601_fsm  2601_vm  2602  2602_fsm  2602_vm  2603  (+153 more)
postgres-data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
src/: schemas.py
src/conf/: config.py  limiter_config.py  messages.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
src/services/templates/: verify_email.html
tests/: conftest.py  test_e2e_auth.py  test_repository_contacts.py  test_repository_users.py
